--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="caixa">
       <div class="qrcode">
-        <img class="imagem" src="![image-qr-code](https://user-images.githubusercontent.com/84734202/152064435-25ef0d7d-70af-4883-8901-f82e5aec1a4c.png)"
+        <img class="imagem" src="https://user-images.githubusercontent.com/84734202/152064435-25ef0d7d-70af-4883-8901-f82e5aec1a4c.png"
 >
       </div>
 
